--- a/departement-service/src/main/resources/messages/messages.properties
+++ b/departement-service/src/main/resources/messages/messages.properties
@@ -1,7 +1,8 @@
 # BusinessException messages
 businessException.InternalError.message=The server encountered an internal error or misconfiguration and was unable to complete your request.
-businessException.element.NotFound.message=Element with {0} {1} could not be found.
-businessException.element.AlreadyExists.message=Element with {0} {1} already exists.
+businessException.element.NotFound.message=Departement with {0} {1} could not be found.
+businessException.element.AlreadyExists.message=Departement with {0} {1} already exists.
+businessException.element.AlreadyUsedInAnotherEntity.message=Departement with {0} {1} is already used in another entity.
 # Validation messages
 validation.pagination.page.Min.message=page:{jakarta.validation.constraints.Min.message}
 validation.pagination.size.Min.message=size:{jakarta.validation.constraints.Min.message}
