Making Some Changes

--- a/semestre-service/src/main/resources/messages/messages.properties
+++ b/semestre-service/src/main/resources/messages/messages.properties
@@ -2,6 +2,7 @@
 businessException.InternalError.message=The server encountered an internal error or misconfiguration and was unable to complete your request.
 businessException.element.NotFound.message=Element with {0} {1} could not be found.
 businessException.element.AlreadyExists.message=Element with {0} {1} already exists.
+businessException.Filiere.NotFound.message=Filiere with {0} {1} could not be found.
 # Validation messages
 validation.pagination.page.Min.message=page:{jakarta.validation.constraints.Min.message}
 validation.pagination.size.Min.message=size:{jakarta.validation.constraints.Min.message}
