--- a/filiere-service/src/main/resources/messages/messages.properties
+++ b/filiere-service/src/main/resources/messages/messages.properties
@@ -2,6 +2,20 @@
 businessException.InternalError.message=The server encountered an internal error or misconfiguration and was unable to complete your request.
 businessException.element.NotFound.message=Element with {0} {1} could not be found.
 businessException.element.AlreadyExists.message=Element with {0} {1} already exists.
+
+# RegledeGestion messages
+
+businessException.RegleDeCalcul.AlreadyExists.message=Regle de calcul with {0} {1} already exists.
+businessException.RegleDeCalcul.NotFound.message=Regle de calcul with {0} {1} could not be found.
+usinessException.RegleDeCalcul.CannotBeDeleted.message=Regle de calcul with {0} {1} cannot be deleted.
+
+## Filiere messages
+businessException.Filiere.AlreadyExists.message=Filiere with {0} {1} already exists.
+businessException.Filiere.NotFound.message=Filiere with {0} {1} could not be found.
+
+
+# Departement messages
+businessException.Departement.NotFound.message=Departement with {0} {1} could not be found.
 # Validation messages
 validation.pagination.page.Min.message=page:{jakarta.validation.constraints.Min.message}
 validation.pagination.size.Min.message=size:{jakarta.validation.constraints.Min.message}
