--- a/element-service/src/main/resources/messages/messages.properties
+++ b/element-service/src/main/resources/messages/messages.properties
@@ -1,8 +1,4 @@
 # BusinessException messages
 businessException.InternalError.message=The server encountered an internal error or misconfiguration and was unable to complete your request.
-businessException.element.NotFound.message=Element with {0} {1} could not be found.
-businessException.element.AlreadyExists.message=Element with {0} {1} already exists.
-# Validation messages
-validation.pagination.page.Min.message=page:{jakarta.validation.constraints.Min.message}
-validation.pagination.size.Min.message=size:{jakarta.validation.constraints.Min.message}
-validation.pagination.size.Max.message=size:{jakarta.validation.constraints.Max.message}
+businessException.element.NotFound.message=Element with code {0} could not be found.
+businessException.element.AlreadyExists.message=Element with code {0} already exists.
