--- a/utilisateur-service/src/main/resources/messages/messages.properties
+++ b/utilisateur-service/src/main/resources/messages/messages.properties
@@ -1,16 +1,12 @@
 # BusinessException messages
 businessException.InternalError.message=The server encountered an internal error or misconfiguration and was unable to complete your request.
 # RoleException messages
-businessException.role.NotFound.message=Role with {0} {1} could not be found.
-businessException.role.AlreadyExists.message=Role with {0} {1} already exists.
-businessException.role.Conflict.message=Utilisateur with {0} {1} is not {2}.
+businessException.role.NotFound.message=Role with code {0} could not be found.
+businessException.role.AlreadyExists.message=Role with code {0} already exists.
+businessException.role.Conflict.message=Utilisateur with code {0} is not {1}.
 # PermissionException messages
-businessException.permission.NotFound.message=Permission with {0} {1} could not be found.
-businessException.permission.AlreadyExists.message=Permission with {0} {1} already exists.
+businessException.permission.NotFound.message=Permission with code {0} could not be found.
+businessException.permission.AlreadyExists.message=Permission with code {0} already exists.
 # UtilisateurException messages
-businessException.utilisateur.NotFound.message={0} with {1} {2} could not be found.
-businessException.utilisateur.AlreadyExists.message={0} with {1} {2} already exists.
-# Validation messages
-validation.pagination.page.Min.message=page:{jakarta.validation.constraints.Min.message}
-validation.pagination.size.Min.message=size:{jakarta.validation.constraints.Min.message}
-validation.pagination.size.Max.message=size:{jakarta.validation.constraints.Max.message}
+businessException.utilisateur.NotFound.message={0} with code {1} could not be found.
+businessException.utilisateur.AlreadyExists.message={0} with code {1} already exists.
