update crud of note element & module

--- a/note-service/src/main/resources/messages/messages.properties
+++ b/note-service/src/main/resources/messages/messages.properties
@@ -4,3 +4,6 @@ businessException.note.element.NotFound.message=note element with id {0} could n
 businessException.note.element.AlreadyExists.message=note element with id {0} already exists.
 businessException.note.module.NotFound.message=note module with id {0} could not be found.
 businessException.note.module.AlreadyExists.message=note module with id {0} already exists.
+businessException.module.NotFound.message=module with id {0} could not be found.
+businessException.element.NotFound.message=element with id {0} could not be found.
+
