--- a/filiere-service/src/main/resources/messages/messages.properties
+++ b/filiere-service/src/main/resources/messages/messages.properties
@@ -5,3 +5,14 @@ businessException.filiere.AlreadyExists.message=Filiere with code {0} already ex
 
 businessException.regle.NotFound.message=Regle de calcul with code {0} could not be found.
 businessException.regle.AlreadyExists.message=Regle de calcul with code {0} already exists.
+
+businessException.departement.NotFound.message=Departement with code {0} could not be found.
+
+
+businessException.user.NotFound.message=User with code {0} could not be found.
+
+businessException.semestre.NotFound.message=Semestre with code {0} could not be found.
+businessException.semestre.AlreadyExists.message=Semestre with code {0} already exists.
+
+businessException.anneeUniversitaire.NotFound.message=Annee universitaire with code {0} could not be found.
+businessException.anneeUniversitaire.AlreadyExists.message=Annee universitaire with code {0} already exists.
