--- a/semestre-service/src/main/resources/messages/messages.properties
+++ b/semestre-service/src/main/resources/messages/messages.properties
@@ -2,3 +2,13 @@
 businessException.InternalError.message=The server encountered an internal error or misconfiguration and was unable to complete your request.
 businessException.semestre.NotFound.message=Semestre with code {0} could not be found.
 businessException.semestre.AlreadyExists.message=Semestre with code {0} already exists.
+
+
+businessException.filiere.NotFound.message=Filiere with code {0} could not be found.
+businessException.filiere.AlreadyExists.message=Filiere with code {0} already exists.
+
+businessException.module.NotFound.message=Module with code {0} could not be found.
+businessException.module.AlreadyExists.message=Module with code {0} already exists.
+
+businessException.session.NotFound.message=Session with code {0} could not be found.
+businessException.session.AlreadyExists.message=Session with code {0} already exists.
