--- a/departement-service/src/main/resources/messages/messages.properties
+++ b/departement-service/src/main/resources/messages/messages.properties
@@ -2,3 +2,10 @@
 businessException.InternalError.message=The server encountered an internal error or misconfiguration and was unable to complete your request.
 businessException.departement.NotFound.message=Departement with code {0} could not be found.
 businessException.departement.AlreadyExists.message=Departement with code {0} already exists.
+
+
+businessException.user.NotFound.message=User with id {0} could not be found.
+businessException.user.AlreadyExists.message=User with id {0} already exists.
+
+businessException.filiere.NotFound.message=Filiere with code {0} could not be found.
+businessException.filiere.AlreadyExists.message=Filiere with code {0} already exists.
