fix feign exeptions

--- a/note-service/src/main/resources/messages/messages.properties
+++ b/note-service/src/main/resources/messages/messages.properties
@@ -6,3 +6,4 @@ businessException.note.module.NotFound.message=note module with id {0} could not
 businessException.note.module.AlreadyExists.message=note module with id {0} already exists.
 businessException.module.NotFound.message=module with id {0} could not be found.
 businessException.element.NotFound.message=element with id {0} could not be found.
+businessException.client.NotFound.message={0}.
