filiere-regleDeCalcul refactor

--- a/filiere-service/src/main/resources/messages/messages.properties
+++ b/filiere-service/src/main/resources/messages/messages.properties
@@ -1,7 +1,10 @@
-# BusinessException messages
+### BusinessException messages
 businessException.InternalError.message=The server encountered an internal error or misconfiguration and was unable to complete your request.
-businessException.filiere.NotFound.message=Filiere with code {0} could not be found.
-businessException.filiere.AlreadyExists.message=Filiere with code {0} already exists.
-
-businessException.regle.NotFound.message=Regle de calcul with code {0} could not be found.
-businessException.regle.AlreadyExists.message=Regle de calcul with code {0} already exists.
+# placeholders:
+#   {0}: elementType
+#   {1}: idFieldName
+#   {2}: idFieldValue
+businessException.NotFound.message={0} with {1} {2} could not be found.
+businessException.AlreadyExists.message={0} with {1} {2} already exists.
+businessException.many.NotFound.message=One or many {0} could not be found.
+businessException.many.AlreadyExists.message=One or many {0} already exist.
