filiere:webClient,departement integration

--- a/filiere-service/src/main/resources/messages/messages.properties
+++ b/filiere-service/src/main/resources/messages/messages.properties
@@ -8,3 +8,4 @@ businessException.NotFound.message={0} with {1} {2} could not be found.
 businessException.AlreadyExists.message={0} with {1} {2} already exists.
 businessException.many.NotFound.message=One or many {0} could not be found.
 businessException.many.AlreadyExists.message=One or many {0} already exist.
+businessException.DuplicateEntry.message=The request contains duplicate entries.
