--- a/utilisateur-service/src/main/resources/messages/messages.properties
+++ b/utilisateur-service/src/main/resources/messages/messages.properties
@@ -1,11 +1,11 @@
-# BusinessException messages
+### BusinessException messages
 businessException.InternalError.message=The server encountered an internal error or misconfiguration and was unable to complete your request.
-# RoleException messages
-businessException.role.NotFound.message=Role with code {0} could not be found.
-businessException.role.AlreadyExists.message=Role with code {0} already exists.
-# PermissionException messages
-businessException.permission.NotFound.message=Permission with code {0} could not be found.
-businessException.permission.AlreadyExists.message=Permission with code {0} already exists.
-# UtilisateurException messages
-businessException.utilisateur.NotFound.message={0} with code {1} could not be found.
-businessException.utilisateur.AlreadyExists.message={0} with code {1} already exists.
+# placeholders:
+#   {0}: elementType
+#   {1}: idFieldName
+#   {2}: idFieldValue
+businessException.NotFound.message={0} with {1} {2} could not be found.
+businessException.AlreadyExists.message={0} with {1} {2} already exists.
+businessException.many.NotFound.message=One or many {0} could not be found.
+businessException.many.AlreadyExists.message=One or many {0} already exist.
+businessException.DuplicateEntry.message=The request contains duplicate entries.
