--- a/utilisateur-service/src/main/resources/messages/messages.properties
+++ b/utilisateur-service/src/main/resources/messages/messages.properties
@@ -9,3 +9,4 @@ businessException.AlreadyExists.message={0} with {1} {2} already exists.
 businessException.many.NotFound.message=One or many {0} could not be found.
 businessException.many.AlreadyExists.message=One or many {0} already exist.
 businessException.DuplicateEntry.message=The request contains duplicate entries.
+businessException.InvalidSheet.message=The Sheet format is invalid ({0}).
